--- a/MyMUtileriasGenericas/packages.config
+++ b/MyMUtileriasGenericas/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="MySql.Data" version="6.9.8" targetFramework="net461" />
+  <package id="MySql.Data.Entity" version="6.9.8" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net461" />
 </packages>
