--- a/MyMUtileriasGenericas/MyMUtileriasGenericas.csproj
+++ b/MyMUtileriasGenericas/MyMUtileriasGenericas.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MyMUtileriasGenericas</RootNamespace>
-    <AssemblyName>MyMUtileriasGenericas</AssemblyName>
+    <AssemblyName>System.Mym.Utilerias</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -92,6 +92,7 @@
     <Compile Include="AccesoDatos\TransaccionBd.cs" />
     <Compile Include="AccesoDatos\TransaccionGenerica.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Refactor\Multimedia.cs" />
     <Compile Include="Seguridad\ProcesaDatosCD.cs" />
     <Compile Include="TestUtilerias.cs" />
   </ItemGroup>
@@ -99,9 +100,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Refactor\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="ArchivosPlanos\Instrucciones.txt" />
     <Content Include="favicon.ico" />
