--- a/MyMUtileriasGenericas/packages.config
+++ b/MyMUtileriasGenericas/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="log4net" version="2.0.5" targetFramework="net461" />
   <package id="MySql.Data" version="6.9.8" targetFramework="net461" />
   <package id="MySql.Data.Entity" version="6.9.8" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net461" />
 </packages>
