--- a/MyMDatos/MyMDatos.csproj
+++ b/MyMDatos/MyMDatos.csproj
@@ -41,10 +41,17 @@
     <Reference Include="MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="MySql.Data.Entity.EF5, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="MySql.Data.Entity.EF6, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Mym.Utilerias">
+      <HintPath>..\MyMRepository\System.Mym.Utilerias.dll</HintPath>
+    </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
@@ -56,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CRUD\MySQL\MymInfo\FactoryCrudMymInfo.cs" />
+    <Compile Include="CRUD\MySQL\MymInfo\ImplCrudMymPersona.cs" />
     <Compile Include="ORM\ForMySQL\ModelMyM.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
