--- a/MyMUtileriasGenericas/MyMUtileriasGenericas.csproj
+++ b/MyMUtileriasGenericas/MyMUtileriasGenericas.csproj
@@ -88,6 +88,7 @@
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Transactions" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -106,6 +107,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Refactor\Multimedia.cs" />
     <Compile Include="Seguridad\ProcesaDatosCD.cs" />
+    <Compile Include="Seguridad\TokenGenerator.cs" />
     <Compile Include="TestUtilerias.cs" />
   </ItemGroup>
   <ItemGroup>
